WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
270445
[WPE][GTK][Debug] ASSERTION FAILED: !layoutRoot->needsLayout() in compositing/fixed-with-fixed-layout.html
https://bugs.webkit.org/show_bug.cgi?id=270445
Summary
[WPE][GTK][Debug] ASSERTION FAILED: !layoutRoot->needsLayout() in compositing...
Vitaly Dyackhov
Reported
2024-03-04 07:58:14 PST
Stack trace: #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:351 #1 0x00007fe50b910310 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:780 #2 0x00007fe513bfef14 in WebCore::LocalFrameViewLayoutContext::performLayout() (this=0x7fe49e120768) at /app/webkit/Source/WebCore/page/LocalFrameViewLayoutContext.cpp:269 #3 0x00007fe513bfe05b in WebCore::LocalFrameViewLayoutContext::layout() (this=0x7fe49e120768) at /app/webkit/Source/WebCore/page/LocalFrameViewLayoutContext.cpp:151 #4 0x00007fe512be1f2b in WebCore::Document::implicitClose() (this=0x7fe49e12b400) at /app/webkit/Source/WebCore/dom/Document.cpp:3808 #5 0x00007fe513977bd8 in WebCore::FrameLoader::checkCallImplicitClose() (this=0x7fe4ef060600) at /app/webkit/Source/WebCore/loader/FrameLoader.cpp:1051 #6 0x00007fe51397781a in WebCore::FrameLoader::checkCompleted() (this=0x7fe4ef060600) at /app/webkit/Source/WebCore/loader/FrameLoader.cpp:988 #7 0x00007fe5139772e1 in WebCore::FrameLoader::finishedParsing() (this=0x7fe4ef060600) at /app/webkit/Source/WebCore/loader/FrameLoader.cpp:896 #8 0x00007fe512bf5fe3 in WebCore::Document::finishedParsing() (this=0x7fe49e12b400) at /app/webkit/Source/WebCore/dom/Document.cpp:7236 #9 0x00007fe513478d0a in WebCore::HTMLConstructionSite::finishedParsing() (this=0x7fe4ef4683b8) at /app/webkit/Source/WebCore/html/parser/HTMLConstructionSite.cpp:461 #10 0x00007fe5134d0898 in WebCore::HTMLTreeBuilder::finished() (this=0x7fe4ef468380) at /app/webkit/Source/WebCore/html/parser/HTMLTreeBuilder.cpp:3114 #11 0x00007fe51347e262 in WebCore::HTMLDocumentParser::end() (this=0x7fe49e267000) at /app/webkit/Source/WebCore/html/parser/HTMLDocumentParser.cpp:446 #12 0x00007fe51347e392 in WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() (this=0x7fe49e267000) at /app/webkit/Source/WebCore/html/parser/HTMLDocumentParser.cpp:455 #13 0x00007fe51347cc1a in WebCore::HTMLDocumentParser::prepareToStopParsing() (this=0x7fe49e267000) at /app/webkit/Source/WebCore/html/parser/HTMLDocumentParser.cpp:150 #14 0x00007fe51347e3cd in WebCore::HTMLDocumentParser::attemptToEnd() (this=0x7fe49e267000) at /app/webkit/Source/WebCore/html/parser/HTMLDocumentParser.cpp:467 #15 0x00007fe51347e481 in WebCore::HTMLDocumentParser::finish() (this=0x7fe49e267000) at /app/webkit/Source/WebCore/html/parser/HTMLDocumentParser.cpp:495 #16 0x00007fe51393c75c in WebCore::DocumentWriter::end() (this=0x7fe49e2630d8) at /app/webkit/Source/WebCore/loader/DocumentWriter.cpp:351 #17 0x00007fe513926891 in WebCore::DocumentLoader::finishedLoading() (this=0x7fe49e263000) at /app/webkit/Source/WebCore/loader/DocumentLoader.cpp:504 #18 0x00007fe5139262d6 in WebCore::DocumentLoader::notifyFinished(WebCore::CachedResource&, WebCore::NetworkLoadMetrics const&) (this=0x7fe49e263000, resource=..., metrics=...) at /app/webkit/Source/WebCore/loader/DocumentLoader.cpp:449 #19 0x00007fe513aa8e2b in WebCore::CachedResource::checkNotify(WebCore::NetworkLoadMetrics const&) (this=0x7fe4ef4754b0, metrics=...) at /app/webkit/Source/WebCore/loader/cache/CachedResource.cpp:331 #20 0x00007fe513aa8f9f in WebCore::CachedResource::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) (this=0x7fe4ef4754b0, metrics=...) at /app/webkit/Source/WebCore/loader/cache/CachedResource.cpp:348 #21 0x00007fe513aa425b in WebCore::CachedRawResource::finishLoading(WebCore::FragmentedSharedBuffer const*, WebCore::NetworkLoadMetrics const&) (this=0x7fe4ef4754b0, data=0x7fe4ef078c40, metrics=...) at /app/webkit/Source/WebCore/loader/cache/CachedRawResource.cpp:128 #22 0x00007fe513a2524e in WebCore::SubresourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) (this=0x7fe4ef0b9a20, networkLoadMetrics=...) at /app/webkit/Source/WebCore/loader/SubresourceLoader.cpp:774 #23 0x00007fe50d0bf640 in WebKit::WebResourceLoader::didFinishResourceLoad(WebCore::NetworkLoadMetrics&&) (this=0x7fe4ef340680, networkLoadMetrics=...) at /app/webkit/Source/WebKit/WebProcess/Network/WebResourceLoader.cpp:265 #24 0x00007fe50bdf18c6 in _ZZN3IPC18callMemberFunctionIN6WebKit17WebResourceLoaderES2_FvON7WebCore18NetworkLoadMetricsEESt5tupleIJS4_EEEEvPT_MT0_T1_OT2_ENKUlDpOT_E_clIJS4_EEEDaSI_ (__closure=0x7ffd78381f60) at /app/webkit/Source/WebKit/Platform/IPC/HandleMessage.h:135 #25 0x00007fe50bdf4ac5 in _ZSt13__invoke_implIvZN3IPC18callMemberFunctionIN6WebKit17WebResourceLoaderES3_FvON7WebCore18NetworkLoadMetricsEESt5tupleIJS5_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_JS5_EESA_St14__invoke_otherOSC_DpOT1_ (__f=...) at /usr/include/c++/13.2.0/bits/invoke.h:61 #26 0x00007fe50bdf365b in _ZSt8__invokeIZN3IPC18callMemberFunctionIN6WebKit17WebResourceLoaderES3_FvON7WebCore18NetworkLoadMetricsEESt5tupleIJS5_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_JS5_EENSt15__invoke_resultISA_JDpT0_EE4typeEOSA_DpOSM_ (__fn=...) at /usr/include/c++/13.2.0/bits/invoke.h:96 #27 0x00007fe50bdf190f in _ZSt12__apply_implIZN3IPC18callMemberFunctionIN6WebKit17WebResourceLoaderES3_FvON7WebCore18NetworkLoadMetricsEESt5tupleIJS5_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_S9_JLm0EEEDcOSA_OSC_St16integer_sequenceImJXspT1_EEE (__f=..., __t=...) at /usr/include/c++/13.2.0/tuple:2288 #28 0x00007fe50bdf194d in _ZSt5applyIZN3IPC18callMemberFunctionIN6WebKit17WebResourceLoaderES3_FvON7WebCore18NetworkLoadMetricsEESt5tupleIJS5_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_S9_EDcOSA_OSC_ (__f=..., __t=...) at /usr/include/c++/13.2.0/tuple:2299 #29 0x00007fe50bdf19b2 in IPC::callMemberFunction<WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics> >(WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&), std::tuple<WebCore::NetworkLoadMetrics>&&) (object=0x7fe4ef340680, function=(void (WebKit::WebResourceLoader::*)(WebKit::WebResourceLoader * const, WebCore::NetworkLoadMetrics &&)) 0x7fe50d0bf2d8 <WebKit::WebResourceLoader::didFinishResourceLoad(WebCore::NetworkLoadMetrics&&)>, tuple=...) at /app/webkit/Source/WebKit/Platform/IPC/HandleMessage.h:133 #30 0x00007fe50bdf00d3 in IPC::handleMessage<Messages::WebResourceLoader::DidFinishResourceLoad, WebKit::WebResourceLoader, WebKit::WebResourceLoader, void (WebCore::NetworkLoadMetrics&&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebResourceLoader*, void (WebKit::WebResourceLoader::*)(WebCore::NetworkLoadMetrics&&)) (connection=..., decoder=..., object=0x7fe4ef340680, function=(void (WebKit::WebResourceLoader::*)(WebKit::WebResourceLoader * const, WebCore::NetworkLoadMetrics &&)) 0x7fe50d0bf2d8 <WebKit::WebResourceLoader::didFinishResourceLoad(WebCore::NetworkLoadMetrics&&)>) at /app/webkit/Source/WebKit/Platform/IPC/HandleMessage.h:235 #31 0x00007fe50bdef484 in WebKit::WebResourceLoader::didReceiveWebResourceLoaderMessage(IPC::Connection&, IPC::Decoder&) (this=0x7fe4ef340680, connection=..., decoder=...) at /app/webkit/WebKitBuild/WPE/Debug/DerivedSources/WebKit/WebResourceLoaderMessageReceiver.cpp:78 #32 0x00007fe50d0b4dd5 in WebKit::NetworkProcessConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) (this=0x7fe4ef00c300, connection=..., decoder=...) at /app/webkit/Source/WebKit/WebProcess/Network/NetworkProcessConnection.cpp:101 #33 0x00007fe50c8140c9 in IPC::Connection::dispatchMessage(IPC::Decoder&) (this=0x7fe4ef060400, decoder=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1274 #34 0x00007fe50c814318 in IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) (this=0x7fe4ef060400, message=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1322 #35 0x00007fe50c8146f5 in IPC::Connection::dispatchOneIncomingMessage() (this=0x7fe4ef060400) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1387 #36 0x00007fe50c813d0c in operator()() const (__closure=0x7fe4ef204148) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1236 #37 0x00007fe50c81bb2e in WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::<lambda()>, void>::call(void) (this=0x7fe4ef204140) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #38 0x00007fe50c36177b in WTF::Function<void ()>::operator()() const (this=0x7ffd783823f0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #39 0x00007fe50f8aec23 in WTF::RunLoop::performWork() (this=0x7fe4ef0180c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #40 0x00007fe50f970662 in operator()(gpointer) const (__closure=0x0, userData=0x7fe4ef0180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #41 0x00007fe50f970686 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #42 0x00007fe50f9705f5 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x558f46172280, callback=0x7fe50f970669 <_FUN(gpointer)>, userData=0x7fe4ef0180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #43 0x00007fe50f970643 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #44 0x00007fe50052bd36 in g_main_dispatch (context=0x558f46172120) at ../glib/gmain.c:3460 #45 g_main_context_dispatch (context=0x558f46172120) at ../glib/gmain.c:4200 #46 0x00007fe5005892b8 in g_main_context_iterate.isra.0 (context=0x558f46172120, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #47 0x00007fe50052b3ff in g_main_loop_run (loop=0x558f46172260) at ../glib/gmain.c:4479 #48 0x00007fe50f970cbe in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #49 0x00007fe50d3c1765 in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7ffd783826c0, argc=4, argv=0x7ffd78382888) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #50 0x00007fe50d3c15bc in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7ffd78382888) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #51 0x00007fe50d3c14c3 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7ffd78382888) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:83 #52 0x0000558f4595c8c9 in main(int, char**) (argc=4, argv=0x7ffd78382888) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2024-03-04 08:00:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25415
EWS
Comment 2
2024-03-14 02:22:27 PDT
Committed
276079@main
(7c138c89f181): <
https://commits.webkit.org/276079@main
> Reviewed commits have been landed. Closing PR #25415 and removing active labels.
Michael Catanzaro
Comment 3
2024-05-07 08:52:49 PDT
Reopened Bugzilla. REGRESSION(
276079@main
): [GTK] Web view content disappears after back/forward navigation, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=273792
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug