[CoordinatedGraphics] Setting `LocalFrameView`'s content size should not require relayout https://bugs.webkit.org/show_bug.cgi?id=270445

Reviewed by Darin Adler.

In `LocalFrameViewLayoutContext::performLayout()` we layout the render
tree in several phases:

- `LayoutPhase::InPreLayout`
- `LayoutPhase::InRenderTreeLayout`
- `LayoutPhase::InViewSizeAdjust`
- `LayoutPhase::InPostLayout`

In the last phase, we assert that the layout root doesn't require
relayout after updating `LocalFrameView`'s content size.

Currently, at the end of `LayerTreeHost::contentsSizeChanged()` we call
`didChangeViewport()`, which in some circumstances (e.g. when fixed
layout is used) can trigger
`LocalFrameView::setViewportConstrainedObjectsNeedLayout()` and make
`RenderView::needsLayout()` return `true`. This should not happen.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::contentsSizeChanged):

Canonical link: https://commits.webkit.org/276079@main